objects/CM_Selected_Feature__c.object
<CustomObject>
    <description>Holds data about selected features for Custom Packages</description>
    <fields>
        <fullName>ptt_CM_Custom_Package__c</fullName>
        <label>CM Custom Package</label>
        <referenceTo>CM_Custom_Package__c</referenceTo>
        <relationshipLabel>CM Selected Features</relationshipLabel>
        <relationshipName>CM_Selected_Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ptt_CM_Feature_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relation to feature item</description>
        <label>CM Feature Item</label>
        <referenceTo>CM_Feature_Item__c</referenceTo>
        <relationshipLabel>CM Selected Features</relationshipLabel>
        <relationshipName>CM_Selected_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PT - CM Selected Feature</label>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>CM Selected Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Selected Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>